<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_toolbar"
        app:backgroundTint="@null"
        android:title="@string/main_page"
        android:titleTextColor="@android:color/white" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/sample_image"
                android:scaleType="fitXY"
                />


            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="15dp"
                />

            <TextView
                android:id="@+id/recipe_short_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginVertical="8dp"
                />
            <TextView
                android:id="@+id/recipe_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                />

            <TextView
                android:id="@+id/recipe_preparation_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                />

<!--            <TextView-->
<!--                android:id="@+id/recipe_tags"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginVertical="8dp"-->
<!--                />-->



            <TextView
                android:id="@+id/recipe_ingredients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_activity_ingredients"
                android:textSize="18sp"
                android:layout_marginVertical="8dp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipe_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:clipToPadding="false"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/recipe_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/recipe_activity_description"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/recipe_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background"
                android:padding="10dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
